--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@ body{
     background-color: #000000;
     font-family: 'Lato', sans-serif;
 }
+
+/* NavBar */
 *{
     box-sizing: border-box;
 }
@@ -105,27 +107,39 @@ nav .menu-btn,
 .menu-icon{
 		display:none;
 	}
-
-#header {
-    display: flex;
-    flex-direction: column;
+/* Header */
+.header-heading {
     text-align: center;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    top: 81px;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background: rgba(0,0,0,0,);
-    color: #fff;
+	font-family: 'Montserrat';
+	width: 900px;
+	position: absolute;
+    left: 50%;
+	top: 55%;
+	transform: translate(-50%,-55%);
 }
 
-.h1 {
-font-size: 4rem;
-margin-bottom: 2rem;
+.header-heading h2 span{
+    color: #FF1414;
 }
 
+.header-heading .details{
+    font-size: 23px;
+    color: #c5c5c5;
+}
+.header-heading h2{
+	font-family:'Lato';
+	font-size: 2.7rem;
+	margin:0px;
+	letter-spacing: 2px;
+	color:#ffffff;
+}
+.header-heading h1{
+	font-family:'Lato';
+	font-size: 5rem;
+	margin:0px;
+	letter-spacing: 2px;
+	color:#ffffff;
+}
 
 .header-btns{
     display: flex;
@@ -151,7 +165,7 @@ margin-bottom: 2rem;
     color: #ffffff;
     border: 2px solid #FF1414;
 }
-
+/* Features */
 #features{
     width:100%;
     height:120vh;
@@ -236,34 +250,230 @@ margin-bottom: 2rem;
     margin-top:15px ;
 }
 
+/* Offer */
+#offer{
+    padding-top: 30px;
+    width:100%;
+    height:768px;
+    position: relative;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url(images/offer.png);
+    text-align: center;
+}
+
+.pr-heading{
+    text-align: center;
+	font-family:'Lato';
+	width: 600px;
+	position: absolute;
+    left: 50%;
+	top: 55%;
+	transform: translate(-50%,-55%);
+}
+
+.pr-heading span{
+    color: #FF1414;
+}
+.pr-heading .details{
+    font-size: 23px;
+    color: #c5c5c5;
+}
+.pr-heading .details{
+    font-size: 1.2rem;
+}
+
+.pr-heading h1{
+	font-family:'Lato';
+	font-size: 3rem;
+	margin:0px;
+	letter-spacing: 2px;
+	color:#ffffff;
+}
+.pr-btns{
+    display: flex;
+    margin-top: 40px;
+    margin-left: 25%;
+}
+.pr-btn{
+	width:160px;
+	height: 50px;
+	display: flex;
+	justify-content: center;
+    align-items: center;
+    font-size: 1.4rem;
+    background-color: #FF1414;
+    box-shadow: 5px 10px 30px rgba(255, 2, 2, 0.336);
+    border-radius: 5px;
+	color:#ffffff;
+}
+.pr-btn:hover{
+	background-color: transparent;
+    transition: all ease 0.5s;
+    color: #ffffff;
+    border: 2px solid #FF1414;
+}
 
 
+/* about */
+#about{
+    margin-top:100px ;
+	width:100%;
+	height: 120vh;
+	box-sizing: border-box;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 50px 5% 0px 5%;
+	position: relative;
+}
 
+.about-text{
+    width: 45%;
+    color: #fff;
+    list-style: circle;
+}
+.about-text h1{
+	font-size: 3rem;
+	color:#FF1414;
+    font-weight: 500;
+    margin: 0px;
+	padding: 0px;
+}
+.about-text p{
+    width: 80%;
+	font-size: 1.2rem;
+	color:#cecece;
+	
+}
+.about-text button{
+    margin-top: 20px;
+	width: 140px;
+	height: 45px;
+	border-radius: 10px;
+	border: none;
+    outline: none;
+    color: #ffffff;
+	background-color:#FF1414;
+}
+.about-text button:hover{
+    box-shadow: 5px 10px 30px rgba(255, 2, 2, 0.336);
+	background-color: rgb(0, 0, 0);
+    transition: all ease 0.3s;
+    color: #ffffff;
+}
+.about-image{
+    width: 50%;
+}
+.about-image img{
+  width: 600px;
+}
 
-
-
-
-
-
-
-
+/* Contact */
+#contact{
+    width:100%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+#contact h1{
+    color: #fff;
+    font-size: 3rem;
+}
+#contact form{
+    width:600px;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 40px;
+}
+#contact form input,
+#contact form textarea{
+    width:100%;
+    height:50px;
+    margin:5px 0px;
+    padding: 10px;
+    border: none;
+    outline: none;
+    background-color: #ffffff2d;
+    color: #ffffff;
+    border-radius: 5px;
+}
+#contact form textarea{
+    height: 150px;
+}
+#contact form input[type="submit"]{
+    height: 45px;
+    background: linear-gradient(90deg, #FF1414 20%,#f70000);
+    color: #ffffff;
+    text-transform: uppercase;
+}
 
 
         @media (max-width: 600px) {
             ul {
-                 display: flex;
-                flex-direction: column;
-                flex-wrap: wrap;
-            }
-              li:not(last-child) {
-                  margin: 5px
+                display: flex;
+               flex-direction: column;
+               flex-wrap: wrap;
            }
-              .portfolio {
-                  display: flex;
-                  flex-direction: column;
-                  flex-wrap: wrap;
+             li:not(last-child) {
+                 margin: 5px
+          }
+             .portfolio {
+                 display: flex;
+                 flex-direction: column;
+                 flex-wrap: wrap;
+               }
+                .header-heading{
+                    text-align: center;
+                    font-family: 'Montserrat';
+                    width: 500px;
+                    position: absolute;
+                    left: 50%;
+                    top: 80%;
+                    transform: translate(-50%,-55%);
+                }
+                .header-heading .details{
+                    font-size: 1rem;
+                }
+                .pr-heading{
+                    left: 50%;
+                    top: 50%;
+                    transform: translate(-50%,-50%);
+                }
+                .pr-btn{
+                    margin-left: 20%;
+                    margin-top: 20px;
+                }
+                .pr-heading{
+                    height: 50%;
+                    width: 100%;
+                }
+                .about-image{
+                    display:none;
+                }
+                #about{
+                    justify-content: center;
+                    padding-top: 0px;
+                    text-align: center;
+                    margin-top: 0px;
+                }
+                .about-text{
+                    width: 90%;
+                }
+                .about-text h1{
+                    font-size:4rem;
+                }
+                .about-text p{
+                    width: 100%;
+                }
+                #contact form{
+                    width:90%;
                 }
           }
+
           @media (max-width: 800px) {
           #features {
          height:auto;
@@ -277,7 +487,79 @@ margin-bottom: 2rem;
     .a-b-img img{
 		object-fit:contain;
     }
-          }
+          }   
 
 
-          
+          @media (max-width: 1100px) {
+          .about-image{
+            display:none;
+        }
+        #about{
+            justify-content: center;
+            padding-top: 0px;
+            text-align: center;
+            margin-top: 0px;
+        }
+        .about-text{
+            width: 90%;
+        }
+        .about-text h1{
+            font-size:4rem;
+        }
+        .about-text p{
+            width: 100%;
+        }
+        #features {
+            height:auto;
+             }
+       .a-container{
+           flex-wrap: wrap;
+       }
+       .a-box{
+           flex-grow: 1;
+       }
+       .a-b-img img{
+           object-fit:contain;
+       }
+
+       #main{
+		background-size: 1150px !important;
+		
+	}
+	.header-heading{
+		left: 50%;
+		top: 50%;
+        transform: translate(-50%,-50%);
+        text-align: center;
+    }
+    .header-heading h2{
+        font-size: 1.5rem;
+    }
+    .header-heading h1{
+        font-size: 3rem;
+    }
+    .header-heading .details{
+        font-size: 1rem;
+    }
+    .pr-heading{
+		left: 50%;
+		top: 50%;
+        transform: translate(-50%,-50%);
+        text-align: center;
+    }
+    .pr-heading h2{
+        font-size: 1.5rem;
+    }
+    .pr-heading h1{
+        font-size: 3rem;
+    }
+    .pr-heading .details{
+        font-size: 1rem;
+    }
+	.about-image img{
+		height:400px;
+    }
+    }
+  
+
+   
